ref6 py file for streamlit

--- a/project_music_genre_prediction.ipynb
+++ b/project_music_genre_prediction.ipynb
@@ -75,10 +75,19 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Репозиторий: https://github.com/Yar435/ML_group_project/upload/main"
+    "Репозиторий: [Github ML_Group_project](https://github.com/Yar435/ML_group_project/upload/main)"
    ],
    "metadata": {
     "id": "JXbgFQ4XpsRY"
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Страница приложения: [StreamlitApp ML_Group_project](https://mlgroupproject-gwr9tpjs2acd8yc5jwagzv.streamlit.app/)"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -245,7 +254,19 @@
    "execution_count": 6,
    "outputs": [],
    "source": [
-    "# pip install notebook"
+    "# Объявляем первый синтетический признак - язык названия трека\n",
+    "# Функция для определения языка строки\n",
+    "# def detect_language(text):\n",
+    "#     try:\n",
+    "#         return detect(text)\n",
+    "#     except LangDetectException:\n",
+    "#         return 'unknown'\n",
+    "#\n",
+    "# train['trackname_language'] = train['track_name'].apply(detect_language)\n",
+    "\n",
+    "# То же самое, что сверху, но из подготовленного файла(не дает разброс в 0.1%)\n",
+    "language = pd.read_csv('lang_503921.csv')\n",
+    "train['trackname_language'] = language['trackname_language']"
    ],
    "metadata": {
     "collapsed": false,
@@ -260,21 +281,7 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "# объявляем три синтетических признака\n",
-    "\n",
-    "# Функция для определения языка строки\n",
-    "# def detect_language(text):\n",
-    "#     try:\n",
-    "#         return detect(text)\n",
-    "#     except LangDetectException:\n",
-    "#         return 'unknown'\n",
-    "#\n",
-    "# train['trackname_language'] = train['track_name'].apply(detect_language)\n",
-    "#\n",
-    "# train.to_csv('lang.csv', index=False)\n",
-    "language = pd.read_csv('lang_503921.csv')\n",
-    "train['trackname_language'] = language['trackname_language']\n",
-    "\n",
+    "# объявляем еще два синтетических признака\n",
     "regex = re.compile('[\\u4e00-\\u9fff\\u3040-\\u30ff\\uac00-\\ud7af]+')\n",
     "\n",
     "def contains_ideograph(text):\n",
@@ -325,7 +332,6 @@
    ],
    "source": [
     "# избавляемся от выбросов в duration_ms (-1.0)\n",
-    "\n",
     "train_filtered = train[train['duration_ms'] != -1.0]\n",
     "test_filtered = test[test['duration_ms'] != -1.0]\n",
     "\n",
@@ -365,7 +371,9 @@
    "source": [
     "# Разделим тренировочные данные на тренировочную и валидационную выборки\n",
     "X = train.drop(columns=['instance_id', 'music_genre'])\n",
-    "y = train['music_genre']"
+    "y = train['music_genre']\n",
+    "\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=TEST_SIZE, random_state=RANDOM_STATE, stratify=y)"
    ],
    "metadata": {
     "id": "wjdDcIPXjovn",
@@ -376,21 +384,6 @@
    },
    "execution_count": 10,
    "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [],
-   "source": [
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=TEST_SIZE, random_state=RANDOM_STATE, stratify=y)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-23T07:55:38.725491900Z",
-     "start_time": "2024-05-23T07:55:38.669492600Z"
-    }
-   }
   },
   {
    "cell_type": "code",
@@ -466,6 +459,7 @@
     }
    ],
    "source": [
+    "# Анализ распределения числовых данных\n",
     "numerical_features = ['acousticness', 'track_name', 'danceability',\n",
     "                      'energy', 'duration_ms', 'instrumentalness',\n",
     "                      'liveness', 'loudness', 'speechiness', 'tempo',\n",
@@ -518,6 +512,7 @@
    "execution_count": 16,
    "outputs": [],
    "source": [
+    "# Опциональный блок variance_inflation_factor\n",
     "# from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
     "# from statsmodels.tools.tools import add_constant\n",
     "#\n",
@@ -544,19 +539,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-23T07:55:50.453052700Z",
-     "start_time": "2024-05-23T07:55:50.154050800Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "outputs": [
     {
@@ -573,8 +555,8 @@
     "sns.countplot(x='key', data=train)\n",
     "plt.show()\n",
     "\n",
-    "# sns.countplot(x='mode', data=train)\n",
-    "# plt.show()"
+    "sns.countplot(x='mode', data=train)\n",
+    "plt.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -587,6 +569,7 @@
   {
    "cell_type": "code",
    "source": [
+    "# Опциональный блок: влияние значения в зависимости от жанра\n",
     "# ['acousticness', 'danceability', 'duration_ms', 'instrumentalness', 'liveness', 'loudness', 'speechiness', 'tempo', 'valence']\n",
     "# ['danceability', 'speechiness', 'valence']\n",
     "# for feature in ['key', 'mode', 'trackname_language']:\n",
@@ -714,9 +697,7 @@
     "model_pipeline.fit(X_train, y_train)\n",
     "\n",
     "# Прогнозирование\n",
-    "y_pred = model_pipeline.predict(X_val)\n",
-    "\n",
-    "# os.rename(\"lang.csv\", \"lang_\"+ str(accuracy*1000000).split('.')[0] +\".csv\")"
+    "y_pred = model_pipeline.predict(X_val)"
    ],
    "metadata": {
     "id": "lpM7aKb8jq-M",
@@ -813,7 +794,7 @@
   {
    "cell_type": "code",
    "source": [
-    "# Визуализация для случая без полиномиальных признаков\n",
+    "# Подготовка к визуализации признаков\n",
     "features = transformed_feature_names\n",
     "importance_df = pd.DataFrame({\n",
     "    'features': features,\n",
@@ -825,8 +806,7 @@
     "sns.barplot(x='importance', y='features', data=importance_df)\n",
     "plt.xlabel(\"Важность признаков\")\n",
     "plt.ylabel(\"Признаки\")\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()"
    ],
    "metadata": {
     "id": "JkoTDfxfmJuo",
@@ -846,19 +826,6 @@
      "output_type": "display_data"
     }
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-23T07:57:10.965074500Z",
-     "start_time": "2024-05-23T07:57:10.953143200Z"
-    }
-   }
   }
  ],
  "metadata": {
